CV.pdf url from Drive && text corrections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="home__title">¡Hola!<br>Mi nombre es <span class="home__title-color">Armando</span>, soy
                     <br><span class="auto-input"></span>
                 </h1>
-                <a href="https://drive.google.com/file/d/14Z9_Gns0K9RxxVnlAqqB6HhNEMGmoCTR/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1ut0jR2cy5ATeWFsoP6yGHBbLnNNhvw9N/view"
                     target="_blank" class="button">Consulta aquí mi CV</a>
             </div>
             <div class="home__social">
@@ -52,22 +52,22 @@
             <h2 class="section-title">Acerca de mí
             </h2>
             <div class="about__container bd-grid">
-                <div class="about__img">
-                    <img src="assets/img/about.png" alt="">
-                </div>
+
                 <div>
                     <h2 class="about__subtitle">Armando Linares Gutierrez</h2>
                     <p class="about__text">
                         Soy un Ingeniero de Software apasionado por realizar soluciones innovadoras que aceleren la
                         eficiencia y efectividad para el éxito organizacional; creando sistemas confiables y fáciles de
-                        utilizar para cualquier usuario. Soy un comunicador seguro, pensador estratégico e innovador
+                        utilizar para cualquier usuario.
+                        <br><br>
+                        Soy un comunicador seguro, pensador estratégico e innovador
                         para el desarrollo enfocado en satisfacer las necesidades organizativas de una empresa, resaltar
-                        sus competencias básicas y promover su éxito. <br><br>
-                        Educación: <br><br>
-                        - Ingeniería en Sistemas Computacionales.<br>
-                        - Licenciatura en Administración.<br><br>
+                        sus competencias básicas y promover su éxito.
+                        <br><br>
                         Apasionado de Linux y del software libre, me gusta leer, aprender nuevas tecnologías y estar
                         siempre actualizado.
+                        <br><br>
+                        Actualmente soy Ingeniero de Software Semi-Senior para Wipro Limited.
                     </p>
                 </div>
             </div>
