--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <li class="nav__item">
               <a href="#about" class="nav__link">Acerca de mí</a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <a href="#work" class="nav__link">Tecnologías</a>
-            </li>
+            </li> -->
             <li class="nav__item">
               <a href="#contact" class="nav__link">Contáctame</a>
             </li>
@@ -50,7 +50,7 @@
             ></span>
           </h1>
           <a
-            href="https://drive.google.com/file/d/1MNFG2M8_1XxovK3C35lk8RCvivwT5Ceq/view?usp=sharing"
+            href="https://drive.google.com/file/d/11mQAMqgRhgCAipfHLApRoSizTc1eWODc/view?usp=sharing"
             target="_blank"
             class="button"
             >Consulta aquí mi CV</a
@@ -83,23 +83,17 @@
           <div>
             <h2 class="about__subtitle">Armando Linares Gutierrez</h2>
             <p class="about__text">
-              Soy un Ingeniero de Software apasionado por realizar soluciones
-              innovadoras que aceleren la eficiencia y efectividad para el éxito
-              organizacional; creando sistemas confiables y fáciles de utilizar
-              para cualquier usuario.
+              Ingeniero de Software enfocado en la obtención de resultados, con una sólida experiencia y un historial comprobado en la entrega de soluciones sólidas y escalables.
               <br /><br />
-              Soy un comunicador seguro, pensador estratégico e innovador para
-              el desarrollo enfocado en satisfacer las necesidades organizativas
-              de una empresa, resaltar sus competencias básicas y promover su
-              éxito.
+              Habilidades destacadas en la implementación de tecnología de vanguardia y en la aplicación de metodologías ágiles para impulsar el desarrollo eficiente de Software. 
+              <br><br>Cuento con experiencia en colaboración con equipos multinacionales, lo que ha fortalecido mis habilidades de comunicación y adaptabilidad.
               <br /><br />
-              Apasionado de Linux y del software libre, me gusta leer, aprender
-              nuevas tecnologías y estar siempre actualizado.
+              Apasionado por Linux y el Software libre, disfruto de la lectura y busco constantemente el aprendizaje de nuevas tecnologías para mantenerme siempre actualizado.
             </p>
           </div>
         </div>
       </section>
-      <section class="work section" id="work">
+      <!-- <section class="work section" id="work">
         <h2 class="section-title">Tecnologías</h2>
         <div class="work__container bd-grid">
           <div class="work__img">
@@ -121,7 +115,7 @@
             <img src="assets/img/linux.png" alt="" />
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="contact section" id="contact">
         <h2 class="section-title">Contáctame</h2>
         <div class="brands">
